@@ -1,0 +1,6 @@
+t
+E1|1
+E2|2
+sign-consistency|t
+absolute-id|{1:1,2:2}
+Topology 'signed_edges' dropped
